--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@capacitor-community/sqlite": "3.4.2",
+    "@capacitor/android": "3.4.3",
     "@capacitor/app": "1.1.1",
-    "@capacitor/core": "3.5.0",
+    "@capacitor/camera": "^1.3.1",
+    "@capacitor/core": "3.4.3",
+    "@capacitor/filesystem": "^1.1.0",
+    "@capacitor/geolocation": "^1.3.1",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
@@ -71,7 +76,7 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "3.5.0"
+    "@capacitor/cli": "3.4.3"
   },
   "description": "An Ionic project",
   "repository": {
