--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -2,5 +2,8 @@
 	"appId": "com.hexagon.symbiosis",
 	"appName": "symbiosis",
 	"webDir": "build",
-	"bundledWebRuntime": false
+	"bundledWebRuntime": false,
+	"server": {
+		"url": "http://148.53.163.30:8100"
+	}
 }
