--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@capacitor/status-bar": "1.0.8",
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
-    "@luciad/ria": "^2021.1.7",
-    "@luciad/ria-geometry": "^2021.1.7",
+    "@luciad/ria": "2021.1.07",
+    "@luciad/ria-geometry": "2021.1.07",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
